Fixed alignment for mobile

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -38,6 +38,7 @@
         justify-content: center;
         flex-direction: column;
         padding: 0%;
+        align-items: center;
     }
     .about img {
         width: 300px;
